2004-04-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC3-cvs-b3

	* Fix: JavaScript error on edit_watermark.php
	  "data" was not a valid form member.  We are now defaulting to
	  the cancel button for focus to prevent accidental application
	  of watermarks.

2004-04-06  Alan Harder  <alan.harder@sun.com> 1.4.3-RC3-cvs-b2

	* Same fix as -b1 for Opera.

2004-04-06  Alan Harder  <alan.harder@sun.com> 1.4.3-RC3-cvs-b1

	* Refix: Image frames on Safari (previous fix broke things with fit-to-window).

2004-04-06  Chris Kelly  <ckdake@users.sf.net> 1.4.3-RC2

	* v1.4.3 Release Candidate 2

2004-04-06 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b10

	* Bugfix: When Gallery runs on PHP >=4.3.0 slideshow for modern Browser were broken 
		  in several languages, due to unsupported Charset in html_entity_decode().

2004-04-04 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b9

	* Bugfix: $GLOBALS['user_prefix'] was not used when embedded in phpnuke or nsnnuke.

2004-04-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC2-cvs-b8

	* Change: Add edit_watermark.php and watermark_album.php to
	  $safe_to_include in index.php

2004-04-01  Alan Harder  <alan.harder@sun.com> 1.4.3-RC2-cvs-b7

	* Bugfix: Image frames on Safari.

2004-04-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC2-cvs-b6

	* Change:  Replace = with : in embedded_style.css for *all* skins

2004-03-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC2-cvs-b5

	* Change:  Merging donw's optional pnmcomp/composite fix for
	  watermarking

2004-03-31 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b4

	* Change: Trivial add of Mambo to list of Environments in Config Wizard.

2004-03-30 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b3

	* Change: Little Changes for phpBB2. No major changes.

2004-03-30 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b2

	* Bugfix: Added missing quotes around a defined check.

2004-03-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC2-cvs-b1
