@@ -302,49 +302,54 @@ $adminText .="</span>";
 
 /* admin items for drop-down menu */
 $adminOptions = array(
-		      'add_photos'      => array('name' => _('add photos'),
+		      'add_photos'      => array('name' 	=> _('add photos'),
 						 'requirements' => array('canAddToAlbum'),
-						 'action' => 'popup',
-						 'value' => makeGalleryUrl('add_photos_frame.php',
-									   array('set_albumName' => $gallery->session->albumName))),
+						 'action' 	=> 'popup',
+						 'value' 	=> makeGalleryUrl('add_photos_frame.php', 
+									array('set_albumName' => $gallery->session->albumName, 
+										'type' => 'popup'))),
 		      'rename_album'    => array('name' => _('rename album'),
 						 'requirements' => array('isAlbumOwner'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('rename_album.php',
-									   array('set_albumName' => $gallery->session->albumName,
-										 'index' => $i, 'useLoad' => 1))),
+								array('set_albumName' => $gallery->session->albumName,
+									'type' => 'popup',
+									'index' => $i, 'useLoad' => 1))),
 		      'nested_album'    => array('name' => _('new nested album'),
 						 'requirements' => array('canCreateSubAlbum',
 									 'notOffline'),
 						 'action' => 'url',
 						 'value' => doCommand('new-album', array('parentName' => $gallery->session->albumName),
-								      'view_album.php')),
+									'view_album.php')),
 		      'custom_fields'   => array('name' => _('custom fields'),
 						 'requirements' => array('canChangeText',
 									 'notOffline'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('extra_fields.php',
-									   array('set_albumName' => $gallery->session->albumName))),
+								array('set_albumName' => $gallery->session->albumName,
+									'type' => 'popup'))),
 		      'edit_captions'   => array('name' => _('edit captions'),
 						 'requirements' => array('canChangeText',
 									 'notOffline'),
 						 'action' => 'url',
 						 'value' => makeGalleryUrl('captionator.php',
-									   array('set_albumName' => $gallery->session->albumName,
-										 'page' => $page, 'perPage' => $perPage))),
+								array('set_albumName' => $gallery->session->albumName,
+									'page' => $page, 'perPage' => $perPage))),
 		      'sort_items'      => array('name' => _('sort items'),
 						 'requirements' => array('canWriteToAlbum',
 									 'photosExist'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('sort_album.php',
-									   array('set_albumName' => $gallery->session->albumName))),
+								array('set_albumName' => $gallery->session->albumName,
+									'type' => 'popup'))),
 		      'resize_all'      => array('name' => _('resize all'),
 						 'requirements' => array('canWriteToAlbum',
 									 'photosExist'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('resize_photo.php',
-									   array('set_albumName' => $gallery->session->albumName,
-										 'index' => 'all'))),
+								array('set_albumName' => $gallery->session->albumName,
+									'index' => 'all',
+									'type' => 'popup'))),
 		      'rebuild_thumbs'  => array('name' => _('rebuild thumbs'),
 						 'requirements' => array('canWriteToAlbum',
 									 'photosExist'),
@@ -356,27 +361,32 @@ $adminOptions = array(
 						 'requirements' => array('canWriteToAlbum'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('edit_appearance.php',
-									   array('set_albumName' => $gallery->session->albumName))),
+								array('set_albumName' => $gallery->session->albumName,
+									'type' => 'popup'))),
 		      'permissions'     => array('name' => _('permissions'),
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('album_permissions.php',
-									   array('set_albumName' => $gallery->session->albumName))),
+								array('set_albumName' => $gallery->session->albumName,
+									'type' => 'popup'))),
 		      'poll_properties' => array('name' => _('poll properties'),
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('poll_properties.php',
-									   array('set_albumName' => $gallery->session->albumName))),
+								array('set_albumName' => $gallery->session->albumName,
+									'type' => 'popup'))),
 		      'poll_results'    => array('name' => _('poll results'),
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'url',
 						 'value' => makeGalleryUrl('poll_results.php',
-									   array('set_albumName' => $gallery->session->albumName))),
+								array('set_albumName' => $gallery->session->albumName,
+									'type' => 'popup'))),
 		      'poll_reset'      => array('name' => _('poll reset'),
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('reset_votes.php',
-									   array('set_albumName' => $gallery->session->albumName))),
+								array('set_albumName' => $gallery->session->albumName,
+									'type' => 'popup'))),
 		      'view_comments'   => array('name' => _('view comments'),
 						 'requirements' => array('isAdminOrAlbumOwner',
 									 'allowComments',
