@@ -1,3 +1,13 @@
+2004-04-11 Jens Tkotz <jens@peino.de> 1.4.3-RC3-cvs-b4
+
+        * Bugfix: Added type to makeGalleryURL.
+                  This gives the possibility not to load Environment in Popups.
+                  This fixes broken Upload Frame Popup in Mambo.
+
+        * Bugfix: Docs Link were broken.
+
+        * New: Added little Gallery <-> Mambo integration HowTo.
+
 2004-04-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC3-cvs-b3
 
 	* Fix: JavaScript error on edit_watermark.php
